goal/target-maven/generated-sources/antlr4/BpmnParser.java
// Generated from Bpmn.g4 by ANTLR 4.9.3
 package org.vnu.sme.goal.dsl.bpmn.parser; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BpmnParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, IDENT=41, STRING=42, STATE_CLAUSE=43, WS=44, LINE_COMMENT=45, 
		BLOCK_COMMENT=46;
	public static final int
		RULE_model = 0, RULE_pool = 1, RULE_laneDecl = 2, RULE_topElement = 3, 
		RULE_startDecl = 4, RULE_endDecl = 5, RULE_eventDecl = 6, RULE_activityDecl = 7, 
		RULE_activityTypeProperty = 8, RULE_activityType = 9, RULE_gatewayDecl = 10, 
		RULE_gatewayTypeProperty = 11, RULE_gatewayFlow = 12, RULE_gatewayFlowCondition = 13, 
		RULE_laneProperty = 14, RULE_flowProperty = 15, RULE_message = 16, RULE_messageFlow = 17, 
		RULE_nameProperty = 18, RULE_triggerProperty = 19, RULE_directionProperty = 20, 
		RULE_messageProperty = 21, RULE_preProperty = 22, RULE_postProperty = 23, 
		RULE_stateClause = 24, RULE_eventType = 25, RULE_eventDir = 26, RULE_gwType = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"model", "pool", "laneDecl", "topElement", "startDecl", "endDecl", "eventDecl", 
			"activityDecl", "activityTypeProperty", "activityType", "gatewayDecl", 
			"gatewayTypeProperty", "gatewayFlow", "gatewayFlowCondition", "laneProperty", 
			"flowProperty", "message", "messageFlow", "nameProperty", "triggerProperty", 
			"directionProperty", "messageProperty", "preProperty", "postProperty", 
			"stateClause", "eventType", "eventDir", "gwType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'model'", "'{'", "'}'", "'pool'", "'for'", "'lane'", "';'", "'start'", 
			"'end'", "'event'", "'activity'", "'type'", "'task'", "'call-activity'", 
			"'subprocess'", "'gateway'", "'flow'", "'post'", "'when'", "'default'", 
			"'message'", "'message-flow'", "'->'", "'name'", "'trigger'", "'direction'", 
			"'pre'", "'none'", "'timer'", "'error'", "'signal'", "'terminate'", "'compensation'", 
			"'conditional'", "'catching'", "'throwing'", "'xor'", "'and'", "'or'", 
			"'event-based'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "IDENT", "STRING", "STATE_CLAUSE", "WS", 
			"LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Bpmn.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BpmnParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ModelContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(BpmnParser.IDENT, 0); }
		public TerminalNode EOF() { return getToken(BpmnParser.EOF, 0); }
		public List<PoolContext> pool() {
			return getRuleContexts(PoolContext.class);
		}
		public PoolContext pool(int i) {
			return getRuleContext(PoolContext.class,i);
		}
		public List<MessageContext> message() {
			return getRuleContexts(MessageContext.class);
		}
		public MessageContext message(int i) {
			return getRuleContext(MessageContext.class,i);
		}
		public List<MessageFlowContext> messageFlow() {
			return getRuleContexts(MessageFlowContext.class);
		}
		public MessageFlowContext messageFlow(int i) {
			return getRuleContext(MessageFlowContext.class,i);
		}
		public List<TopElementContext> topElement() {
			return getRuleContexts(TopElementContext.class);
		}
		public TopElementContext topElement(int i) {
			return getRuleContext(TopElementContext.class,i);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).enterModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).exitModel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnVisitor ) return ((BpmnVisitor<? extends T>)visitor).visitModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(T__0);
			setState(57);
			match(IDENT);
			setState(58);
			match(T__1);
			setState(60); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(59);
				pool();
				}
				}
				setState(62); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__3 );
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__20) {
				{
				{
				setState(64);
				message();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__21) {
				{
				{
				setState(70);
				messageFlow();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__15))) != 0)) {
				{
				{
				setState(76);
				topElement();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(82);
			match(T__2);
			setState(83);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PoolContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(BpmnParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(BpmnParser.IDENT, i);
		}
		public NamePropertyContext nameProperty() {
			return getRuleContext(NamePropertyContext.class,0);
		}
		public List<LaneDeclContext> laneDecl() {
			return getRuleContexts(LaneDeclContext.class);
		}
		public LaneDeclContext laneDecl(int i) {
			return getRuleContext(LaneDeclContext.class,i);
		}
		public PoolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).enterPool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).exitPool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnVisitor ) return ((BpmnVisitor<? extends T>)visitor).visitPool(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PoolContext pool() throws RecognitionException {
		PoolContext _localctx = new PoolContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pool);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__3);
			setState(86);
			match(IDENT);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(87);
				match(T__4);
				setState(88);
				match(IDENT);
				}
			}

			setState(91);
			match(T__1);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__23) {
				{
				setState(92);
				nameProperty();
				}
			}

			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(95);
				laneDecl();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LaneDeclContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(BpmnParser.IDENT, 0); }
		public LaneDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_laneDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).enterLaneDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).exitLaneDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnVisitor ) return ((BpmnVisitor<? extends T>)visitor).visitLaneDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LaneDeclContext laneDecl() throws RecognitionException {
		LaneDeclContext _localctx = new LaneDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_laneDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__5);
			setState(104);
			match(IDENT);
			setState(105);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopElementContext extends ParserRuleContext {
		public StartDeclContext startDecl() {
			return getRuleContext(StartDeclContext.class,0);
		}
		public EndDeclContext endDecl() {
			return getRuleContext(EndDeclContext.class,0);
		}
		public EventDeclContext eventDecl() {
			return getRuleContext(EventDeclContext.class,0);
		}
		public ActivityDeclContext activityDecl() {
			return getRuleContext(ActivityDeclContext.class,0);
		}
		public GatewayDeclContext gatewayDecl() {
			return getRuleContext(GatewayDeclContext.class,0);
		}
		public TopElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).enterTopElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).exitTopElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnVisitor ) return ((BpmnVisitor<? extends T>)visitor).visitTopElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopElementContext topElement() throws RecognitionException {
		TopElementContext _localctx = new TopElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_topElement);
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				startDecl();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				endDecl();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(109);
				eventDecl();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 4);
				{
				setState(110);
				activityDecl();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 5);
				{
				setState(111);
				gatewayDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartDeclContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(BpmnParser.IDENT, 0); }
		public LanePropertyContext laneProperty() {
			return getRuleContext(LanePropertyContext.class,0);
		}
		public TriggerPropertyContext triggerProperty() {
			return getRuleContext(TriggerPropertyContext.class,0);
		}
		public FlowPropertyContext flowProperty() {
			return getRuleContext(FlowPropertyContext.class,0);
		}
		public PrePropertyContext preProperty() {
			return getRuleContext(PrePropertyContext.class,0);
		}
		public StartDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).enterStartDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).exitStartDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnVisitor ) return ((BpmnVisitor<? extends T>)visitor).visitStartDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartDeclContext startDecl() throws RecognitionException {
		StartDeclContext _localctx = new StartDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_startDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__7);
			setState(115);
			match(IDENT);
			setState(116);
			match(T__1);
			setState(117);
			laneProperty();
			setState(118);
			triggerProperty();
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__26) {
				{
				setState(119);
				preProperty();
				}
			}

			setState(122);
			flowProperty();
			setState(123);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndDeclContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(BpmnParser.IDENT, 0); }
		public LanePropertyContext laneProperty() {
			return getRuleContext(LanePropertyContext.class,0);
		}
		public TriggerPropertyContext triggerProperty() {
			return getRuleContext(TriggerPropertyContext.class,0);
		}
		public EndDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).enterEndDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).exitEndDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnVisitor ) return ((BpmnVisitor<? extends T>)visitor).visitEndDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EndDeclContext endDecl() throws RecognitionException {
		EndDeclContext _localctx = new EndDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_endDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(T__8);
			setState(126);
			match(IDENT);
			setState(127);
			match(T__1);
			setState(128);
			laneProperty();
			setState(129);
			triggerProperty();
			setState(130);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventDeclContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(BpmnParser.IDENT, 0); }
		public LanePropertyContext laneProperty() {
			return getRuleContext(LanePropertyContext.class,0);
		}
		public TriggerPropertyContext triggerProperty() {
			return getRuleContext(TriggerPropertyContext.class,0);
		}
		public DirectionPropertyContext directionProperty() {
			return getRuleContext(DirectionPropertyContext.class,0);
		}
		public FlowPropertyContext flowProperty() {
			return getRuleContext(FlowPropertyContext.class,0);
		}
		public EventDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).enterEventDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).exitEventDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnVisitor ) return ((BpmnVisitor<? extends T>)visitor).visitEventDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventDeclContext eventDecl() throws RecognitionException {
		EventDeclContext _localctx = new EventDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_eventDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(T__9);
			setState(133);
			match(IDENT);
			setState(134);
			match(T__1);
			setState(135);
			laneProperty();
			setState(136);
			triggerProperty();
			setState(137);
			directionProperty();
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(138);
				flowProperty();
				}
			}

			setState(141);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActivityDeclContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(BpmnParser.IDENT, 0); }
		public ActivityTypePropertyContext activityTypeProperty() {
			return getRuleContext(ActivityTypePropertyContext.class,0);
		}
		public LanePropertyContext laneProperty() {
			return getRuleContext(LanePropertyContext.class,0);
		}
		public NamePropertyContext nameProperty() {
			return getRuleContext(NamePropertyContext.class,0);
		}
		public PrePropertyContext preProperty() {
			return getRuleContext(PrePropertyContext.class,0);
		}
		public PostPropertyContext postProperty() {
			return getRuleContext(PostPropertyContext.class,0);
		}
		public FlowPropertyContext flowProperty() {
			return getRuleContext(FlowPropertyContext.class,0);
		}
		public ActivityDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_activityDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).enterActivityDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).exitActivityDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnVisitor ) return ((BpmnVisitor<? extends T>)visitor).visitActivityDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActivityDeclContext activityDecl() throws RecognitionException {
		ActivityDeclContext _localctx = new ActivityDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_activityDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(T__10);
			setState(144);
			match(IDENT);
			setState(145);
			match(T__1);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__23) {
				{
				setState(146);
				nameProperty();
				}
			}

			setState(149);
			activityTypeProperty();
			setState(150);
			laneProperty();
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__26) {
				{
				setState(151);
				preProperty();
				}
			}

			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__17) {
				{
				setState(154);
				postProperty();
				}
			}

			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(157);
				flowProperty();
				}
			}

			setState(160);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActivityTypePropertyContext extends ParserRuleContext {
		public ActivityTypeContext activityType() {
			return getRuleContext(ActivityTypeContext.class,0);
		}
		public ActivityTypePropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_activityTypeProperty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).enterActivityTypeProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).exitActivityTypeProperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnVisitor ) return ((BpmnVisitor<? extends T>)visitor).visitActivityTypeProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActivityTypePropertyContext activityTypeProperty() throws RecognitionException {
		ActivityTypePropertyContext _localctx = new ActivityTypePropertyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_activityTypeProperty);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(T__11);
			setState(163);
			activityType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActivityTypeContext extends ParserRuleContext {
		public ActivityTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_activityType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).enterActivityType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).exitActivityType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnVisitor ) return ((BpmnVisitor<? extends T>)visitor).visitActivityType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActivityTypeContext activityType() throws RecognitionException {
		ActivityTypeContext _localctx = new ActivityTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_activityType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__12) | (1L << T__13) | (1L << T__14))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GatewayDeclContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(BpmnParser.IDENT, 0); }
		public LanePropertyContext laneProperty() {
			return getRuleContext(LanePropertyContext.class,0);
		}
		public GatewayTypePropertyContext gatewayTypeProperty() {
			return getRuleContext(GatewayTypePropertyContext.class,0);
		}
		public PrePropertyContext preProperty() {
			return getRuleContext(PrePropertyContext.class,0);
		}
		public List<GatewayFlowContext> gatewayFlow() {
			return getRuleContexts(GatewayFlowContext.class);
		}
		public GatewayFlowContext gatewayFlow(int i) {
			return getRuleContext(GatewayFlowContext.class,i);
		}
		public GatewayDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gatewayDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).enterGatewayDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnListener ) ((BpmnListener)listener).exitGatewayDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnVisitor ) return ((BpmnVisitor<? extends T>)visitor).visitGatewayDecl(this);
			else return visitor.visitChildren(this);
		}
	}
